Bug 152459 - LanguageTool remote grammar checker doesn't work in all Spanish variants
Summary: LanguageTool remote grammar checker doesn't work in all Spanish variants
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-10 18:30 UTC by nuromi
Modified: 2023-03-06 14:49 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nuromi 2022-12-10 18:30:47 UTC
Description:
The LanguageTool remote grammar checker feature doesn't work in all Spanish variants. It just works in Spanish (Argentina) and Spanish (Spain).

Steps to Reproduce:
1. Enable LanguageTool server in settings.
2. Write in a Spanish variant other than Spain or Argentina.

Actual Results:
LanguageTool doesn't check grammar.

Expected Results:
LanguageTool should check grammar.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: es
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Debian 11 with Libreoffice 7.4.3.2 from backports.
Comment 1 Mike Kaganski 2023-03-05 08:40:26 UTC
https://gerrit.libreoffice.org/c/core/+/148201
Comment 2 Mike Kaganski 2023-03-05 08:44:15 UTC
A note: as explained in LanguageTool API documentation [1],

> For languages with variants (English, German, Portuguese) spell checking will
> only be activated when you specify the variant, e.g. en-GB instead of just en.

But in my testing, this may be not exactly true, at least for fr, I see spell being checked by LanguageTool with the patch mentioned above.

[1] https://languagetool.org/http-api/#!/default/post_check
Comment 3 Commit Notification 2023-03-05 14:11:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e7ae5b4793fb74309d5d1f32c3c696d07071d676

tdf#152459: fallback to language-only when looking for grammar checker

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-03-06 14:49:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/21db28345999ee840542532224d67f1f2527f16e

tdf#152459: fallback to language-only when looking for grammar checker

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.