tdf#152459: fallback to language-only when looking for grammar checker

LanguageTool registers itself for languages like "en-US", "es-AR", "de-DE";
but also for generic "en", "es", "de". When the requested language, like
"fr-CH" or "es-PH", is not found in the registered grammar checkers, the
fallback strings will be attempted.

Change-Id: Id460db8d378f246ea98191d22bdb3537fd1aee1c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148201
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>